new site design

--- a/index.html
+++ b/index.html
@@ -23,14 +23,100 @@
     />
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="app.css" />
+    <link rel="stylesheet" href="style.css" />
 
-    <title>Museum of Candy</title>
+    <title>elavibeDotCom</title>
   </head>
 
   <body>
+    <nav id="mainNavbar" class="navbar navbar-dark bg-dark navbar-expand-md py-0 fixed-top ">
+      <a href="#" class="navbar-brand">elavibeDotCom</a>
+      <button
+        class="navbar-toggler"
+        data-toggle="collapse"
+        data-target="#navLinks"
+        aria-label="Toggle navbar"
+      >
+      <span class="navbar-toggler-icon"></button></span>
+      <div class="collapse navbar-collapse" id="navLinks">
+        <ul class="navbar-nav">
+          <li class="navbar-nav">
+            <a href="" class="nav-link">home</a>
+          </li>
+          <li class="navbar-nav">
+            <a href="" class="nav-link">portfolio</a>
+          </li>
+          <li class="navbar-nav">
+            <a href="" class="nav-link">postit drawings</a>
+          </li>
+          <li class="navbar-nav">
+            <a href="" class="nav-link">contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <section class="container-fluid px-0">
+      <div class="row align-items-center">
+        <div class="col-lg-6">
+          <div class="">
+        <h2 class="container-fluid "><img class="img-fluid" src="/websiteDev/elavibe.com/images/elavibeLogo.svg">
+        </h2>
+      </div>
+      </div>
+      <div class="col-lg-6"><img class="img-fluid" src="/websiteDev/elavibe.com/images/StickerSpaceDanNoBackground.png"></div>
+    </div>
+
+    </section>
+
+
+    <section class="container-fluid px-0 ">
+      <div class="row align-items-center content">
+        <div class="col-md-6 order-2 order-md-1">
+        <img src="/websiteDev/elavibe.com/images/IMG_4912.jpeg" alt="picture of me" class="img-fluid">
+      </div>
+        <div class="col-md-6 text-center order-1 order-md-2">
+          <div class="row justify-content-center">
+            <div  class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+              <h2>place holder text</h2>
+          <img src="/websiteDev/elavibe.com/images/lolli_icon.png" class="d-none d-lg-inline">
+          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus adipisci architecto molestiae rem inventore quam corrupti similique. Quis corporis quae necessitatibus. Necessitatibus ab cum porro molestias? Suscipit placeat ea modi? sit amet, consectetur adipisicing elit. Minus adipisci architecto molestiae rem inventore quam corrupti similique. Quis corporis quae necessitatibus. Necessitatibus ab cum porro molestias? Suscipit placeat ea modi?</p>
+            </div>
+          </div>
+      </div>
+      </div>
+          <div class="row align-items-center content">
+       <div class="col-md-6 text-center ">
+          <div class="row justify-content-center">
+            <div  class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+              <h2>place holder text</h2>
+          <img src="/websiteDev/elavibe.com/images/lolli_icon.png" class="d-none d-lg-inline">
+          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus adipisci architecto molestiae rem inventore quam corrupti similique. Quis corporis quae necessitatibus. Necessitatibus ab cum porro molestias? Suscipit placeat ea modi? sit amet, consectetur adipisicing elit. Minus adipisci architecto molestiae rem inventore quam corrupti similique. Quis corporis quae necessitatibus. Necessitatibus ab cum porro molestias? Suscipit placeat ea modi?</p>
+            </div>
+          </div>
+      </div>
+ <div class="col-md-6 "">
+        <img src="/websiteDev/elavibe.com/images/IMG_4912.jpeg" alt="picture of me" class="img-fluid">
+   </div>
+  <div class="row align-items-center content">
+        <div class="col-md-6 order-2 order-md-1">
+        <img src="/websiteDev/elavibe.com/images/IMG_4912.jpeg" alt="picture of me" class="img-fluid">
+      </div>
+        <div class="col-md-6 text-center order-1 order-md-2">
+          <div class="row justify-content-center">
+            <div  class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+              <h2>place holder text</h2>
+          <img src="/websiteDev/elavibe.com/images/lolli_icon.png" class="d-none d-lg-inline">
+          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus adipisci architecto molestiae rem inventore quam corrupti similique. Quis corporis quae necessitatibus. Necessitatibus ab cum porro molestias? Suscipit placeat ea modi? sit amet, consectetur adipisicing elit. Minus adipisci architecto molestiae rem inventore quam corrupti similique. Quis corporis quae necessitatibus. Necessitatibus ab cum porro molestias? Suscipit placeat ea modi?</p>
+            </div>
+          </div>
+      </div>
+      </div>
+
+    </section>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+     <script src="script.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -46,5 +132,8 @@
       integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
       crossorigin="anonymous"
     ></script>
+    <script> 
+  
+  </script>
   </body>
 </html>
