fixed the layout

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <body>
     <nav
       id="mainNavbar"
-      class="navbar navbar-dark bg-dark navbar-expand-md py-0 fixed-top"
+      class="navbar scrolled navbar-dark bg-dark navbar-expand-md py-0 fixed-top"
     >
       <a href="#" class="navbar-brand">elavibeDotCom</a>
       <button
@@ -45,13 +45,17 @@
       <div class="collapse navbar-collapse" id="navLinks">
         <ul class="navbar-nav">
           <li class="navbar-nav">
-            <a href="" class="nav-link">home</a>
+            <a href="http://elavibe.com/index.html" class="nav-link">home</a>
           </li>
           <li class="navbar-nav">
-            <a href="" class="nav-link">portfolio</a>
+            <a href="http://www.elavibe.com/portfolio.html" class="nav-link"
+              >portfolio</a
+            >
           </li>
           <li class="navbar-nav">
-            <a href="" class="nav-link">postit drawings</a>
+            <a href="http://www.elavibe.com/portfolio.html" class="nav-link"
+              >postit drawings</a
+            >
           </li>
           <li class="navbar-nav">
             <a href="" class="nav-link">contact</a>
@@ -61,31 +65,10 @@
     </nav>
 
     <section class="container-fluid px-0">
-      <div class="row align-items-center">
-        <div class="col-lg-6">
-          <div class="d-none d-lg-block">
-            <h2 class="container-fluid">
-              <img
-                class="img-fluid"
-                src="/websiteDev/elavibe.com/images/elavibeLogo.svg"
-              />
-            </h2>
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <img
-            class="img-fluid"
-            src="/websiteDev/elavibe.com/images/StickerSpaceDanNoBackground.png"
-          />
-        </div>
-      </div>
-    </section>
-
-    <section class="container-fluid px-0">
       <div class="row align-items-center content">
-        <div class="col-md-6 order-2 order-md-1">
+        <div class="col-md-6 order-1 order-md-2">
           <img
-            src="/websiteDev/elavibe.com/images/IMG_4912.jpeg"
+            src="elavibeLogoSMOrangeBlack.png"
             alt="picture of me"
             class="img-fluid"
           />
@@ -93,79 +76,17 @@
         <div class="col-md-6 text-center order-1 order-md-2">
           <div class="row justify-content-center">
             <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
-              <h2>place holder text</h2>
-              <img
-                src="/websiteDev/elavibe.com/images/lolli_icon.png"
-                class="d-none d-lg-inline"
-              />
+              <!-- <h2>WuTang SuperGrover</h2> -->
+              <img src="" class="d-none d-lg-inline" />
               <p class="lead">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus
-                adipisci architecto molestiae rem inventore quam corrupti
-                similique. Quis corporis quae necessitatibus. Necessitatibus ab
-                cum porro molestias? Suscipit placeat ea modi? sit amet,
-                consectetur adipisicing elit. Minus adipisci architecto
-                molestiae rem inventore quam corrupti similique. Quis corporis
-                quae necessitatibus. Necessitatibus ab cum porro molestias?
-                Suscipit placeat ea modi?
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row align-items-center content">
-        <div class="col-md-6 text-center">
-          <div class="row justify-content-center">
-            <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
-              <h2>place holder text</h2>
-              <img
-                src="/websiteDev/elavibe.com/images/lolli_icon.png"
-                class="d-none d-lg-inline"
-              />
-              <p class="lead">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus
-                adipisci architecto molestiae rem inventore quam corrupti
-                similique. Quis corporis quae necessitatibus. Necessitatibus ab
-                cum porro molestias? Suscipit placeat ea modi? sit amet,
-                consectetur adipisicing elit. Minus adipisci architecto
-                molestiae rem inventore quam corrupti similique. Quis corporis
-                quae necessitatibus. Necessitatibus ab cum porro molestias?
-                Suscipit placeat ea modi?
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 "">
-        <img
-          src="/websiteDev/elavibe.com/images/IMG_4912.jpeg"
-          alt="picture of me"
-          class="img-fluid"
-        />
-      </div>
-      <div class="row align-items-center content">
-        <div class="col-md-6 order-2 order-md-1">
-          <img
-            src="/websiteDev/elavibe.com/images/IMG_4912.jpeg"
-            alt="picture of me"
-            class="img-fluid"
-          />
-        </div>
-        <div class="col-md-6 text-center order-1 order-md-2">
-          <div class="row justify-content-center">
-            <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
-              <h2>place holder text</h2>
-              <img
-                src="/websiteDev/elavibe.com/images/lolli_icon.png"
-                class="d-none d-lg-inline"
-              />
-              <p class="lead">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus
-                adipisci architecto molestiae rem inventore quam corrupti
-                similique. Quis corporis quae necessitatibus. Necessitatibus ab
-                cum porro molestias? Suscipit placeat ea modi? sit amet,
-                consectetur adipisicing elit. Minus adipisci architecto
-                molestiae rem inventore quam corrupti similique. Quis corporis
-                quae necessitatibus. Necessitatibus ab cum porro molestias?
-                Suscipit placeat ea modi?
+                Bacon ipsum dolor amet tongue tempor consequat kielbasa, spare
+                ribs cupim leberkas aliqua. Nisi pork consequat, ham hock velit
+                short loin pastrami duis ut landjaeger. Kevin velit bresaola
+                filet mignon exercitation turkey ad short loin spare ribs doner
+                ex in minim. Spare ribs pork chop sausage, tri-tip quis shankle
+                esse. Tri-tip non ex salami, sint veniam pig dolore frankfurter
+                labore id spare ribs eiusmod turkey tempor. Ut tempor duis cow
+                chuck.
               </p>
             </div>
           </div>
@@ -190,6 +111,5 @@
       integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
       crossorigin="anonymous"
     ></script>
-    <script></script>
   </body>
 </html>
