--- a/portfolio.html
+++ b/portfolio.html
@@ -31,9 +31,11 @@
   <body>
     <nav
       id="mainNavbar"
-      class="navbar navbar-dark bg-dark navbar-expand-md py-0 fixed-top"
+      class="navbar scrolled navbar-dark bg-dark navbar-expand-md py-0 fixed-top"
     >
-      <a href="#" class="navbar-brand">elavibeDotCom</a>
+      <a href="http://www.elavibe.com/index.html" class="navbar-brand"
+        >elavibeDotCom</a
+      >
       <button
         class="navbar-toggler"
         data-toggle="collapse"
@@ -45,16 +47,22 @@
       <div class="collapse navbar-collapse" id="navLinks">
         <ul class="navbar-nav">
           <li class="navbar-nav">
-            <a href="" class="nav-link">home</a>
+            <a href="http://elavibe.com/index.html" class="nav-link">home</a>
           </li>
           <li class="navbar-nav">
-            <a href="" class="nav-link">portfolio</a>
+            <a href="http://www.elavibe.com/portfolio.html" class="nav-link"
+              >portfolio</a
+            >
           </li>
           <li class="navbar-nav">
-            <a href="" class="nav-link">postit drawings</a>
+            <a href="http://www.elavibe.com/postItPage.html" class="nav-link"
+              >postit drawings</a
+            >
           </li>
           <li class="navbar-nav">
-            <a href="" class="nav-link">contact</a>
+            <a href="http://www.elavibe.com/contact.html" class="nav-link"
+              >contact</a
+            >
           </li>
         </ul>
       </div>
@@ -62,89 +70,276 @@
 
     <section class="container-fluid px-0">
       <div class="row align-items-center content">
-        <div class="col-md-6 order-2 order-md-1">
-          <img
-            src="/websiteDev/elavibe.com/images/WuTangStart.png"
-            alt="picture of me"
-            class="img-fluid"
-          />
+        <div class="col-md-6">
+          <div id="Wutang" class="carousel slide">
+            <div class="carousel-indicators">
+              <button
+                type="button"
+                data-bs-target="#Wutang"
+                data-bs-slide-to="0"
+                class="active"
+                aria-current="true"
+                aria-label="Slide 1"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#Wutang"
+                data-bs-slide-to="1"
+                aria-label="Slide 2"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#Wutang"
+                data-bs-slide-to="2"
+                aria-label="Slide 3"
+              ></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="WuTangStart.png" class="d-block w-100" alt="..." />
+                <div class="carousel-caption d-none d-md-block"></div>
+              </div>
+              <div class="carousel-item">
+                <img src="WuTangMask.png" class="d-block w-100" alt="..." />
+                <div class="carousel-caption d-none d-md-block"></div>
+              </div>
+              <div class="carousel-item">
+                <img src="WuTangSecond.png" class="d-block w-100" alt="..." />
+                <div class="carousel-caption d-none d-md-block"></div>
+              </div>
+            </div>
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#carouselExampleCaptions"
+              data-bs-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#Wutang"
+              data-bs-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
         </div>
         <div class="col-md-6 text-center order-1 order-md-2">
           <div class="row justify-content-center">
             <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
               <h2>WuTang SuperGrover</h2>
-              <img
-                src="/websiteDev/elavibe.com/images/SpaceDan.png"
-                class="d-none d-lg-inline"
-              />
+              <img src="SpaceDan.png" class="d-none d-lg-inline" />
               <p class="lead">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus
-                adipisci architecto molestiae rem inventore quam corrupti
-                similique. Quis corporis quae necessitatibus. Necessitatibus ab
-                cum porro molestias? Suscipit placeat ea modi? sit amet,
-                consectetur adipisicing elit. Minus adipisci architecto
-                molestiae rem inventore quam corrupti similique. Quis corporis
-                quae necessitatibus. Necessitatibus ab cum porro molestias?
-                Suscipit placeat ea modi?
+                Bacon ipsum dolor amet tongue tempor consequat kielbasa, spare
+                ribs cupim leberkas aliqua. Nisi pork consequat, ham hock velit
+                short loin pastrami duis ut landjaeger. Kevin velit bresaola
+                filet mignon exercitation turkey ad short loin spare ribs doner
+                ex in minim. Spare ribs pork chop sausage, tri-tip quis shankle
+                esse. Tri-tip non ex salami, sint veniam pig dolore frankfurter
+                labore id spare ribs eiusmod turkey tempor. Ut tempor duis cow
+                chuck.
               </p>
             </div>
           </div>
         </div>
       </div>
+    </section>
+    <section class="container-fluid px-0">
       <div class="row align-items-center content">
-        <div class="col-md-6 text-center">
+        <div class="col-md-6 text-center order-2 order-md-1">
           <div class="row justify-content-center">
             <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
-              <h2>Floppy Mario</h2>
-              <img
-                src="/websiteDev/elavibe.com/images/SpaceDan.png"
-                class="d-none d-lg-inline"
-              />
+              <h2>Skull Sunflowers</h2>
+              <img src="SpaceDan.png" class="d-none d-lg-inline" />
               <p class="lead">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus
-                adipisci architecto molestiae rem inventore quam corrupti
-                similique. Quis corporis quae necessitatibus. Necessitatibus ab
-                cum porro molestias? Suscipit placeat ea modi? sit amet,
-                consectetur adipisicing elit. Minus adipisci architecto
-                molestiae rem inventore quam corrupti similique. Quis corporis
-                quae necessitatibus. Necessitatibus ab cum porro molestias?
-                Suscipit placeat ea modi?
+                Bacon ipsum dolor amet tongue tempor consequat kielbasa, spare
+                ribs cupim leberkas aliqua. Nisi pork consequat, ham hock velit
+                short loin pastrami duis ut landjaeger. Kevin velit bresaola
+                filet mignon exercitation turkey ad short loin spare ribs doner
+                ex in minim. Spare ribs pork chop sausage, tri-tip quis shankle
+                esse. Tri-tip non ex salami, sint veniam pig dolore frankfurter
+                labore id spare ribs eiusmod turkey tempor. Ut tempor duis cow
+                chuck.
               </p>
             </div>
           </div>
         </div>
-        <div class="col-md-6 "">
-        <img
-          src="/websiteDev/elavibe.com/images/mariowoodstart.png"
-          alt="picture of me"
-          class="img-fluid"
-        />
+        <div class="col-md-6 order-1 order-md-2">
+          <div id="carouselExampleCaptions" class="carousel slide">
+            <div class="carousel-indicators">
+              <button
+                type="button"
+                data-bs-target="#carouselExampleCaptions"
+                data-bs-slide-to="0"
+                class="active"
+                aria-current="true"
+                aria-label="Slide 1"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleCaptions"
+                data-bs-slide-to="1"
+                aria-label="Slide 2"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleCaptions"
+                data-bs-slide-to="2"
+                aria-label="Slide 3"
+              ></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img
+                  src="skullFlowersfinish2.png"
+                  class="d-block w-100"
+                  alt="..."
+                />
+                <div class="carousel-caption d-none d-md-block"></div>
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="skullFlowersSkull.png"
+                  class="d-block w-100"
+                  alt="..."
+                />
+                <div class="carousel-caption d-none d-md-block"></div>
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="skullFlowersStart.png"
+                  class="d-block w-100"
+                  alt="..."
+                />
+                <div class="carousel-caption d-none d-md-block"></div>
+              </div>
+            </div>
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#carouselExampleCaptions"
+              data-bs-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#carouselExampleCaptions"
+              data-bs-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
       </div>
+    </section>
+    <section class="container-fluid px-0">
       <div class="row align-items-center content">
-        <div class="col-md-6 order-2 order-md-1">
-          <img
-            src="/websiteDev/elavibe.com/images/skullFlowersStart.png"
-            alt="picture of me"
-            class="img-fluid"
-          />
+        <div class="col-md-6">
+          <div id="MarioWood" class="carousel slide">
+            <div class="carousel-indicators">
+              <button
+                type="button"
+                data-bs-target="#MarioWood"
+                data-bs-slide-to="0"
+                class="active"
+                aria-current="true"
+                aria-label="Slide 1"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#MarioWood"
+                data-bs-slide-to="1"
+                aria-label="Slide 2"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#MarioWood"
+                data-bs-slide-to="2"
+                aria-label="Slide 3"
+              ></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="mariowoodstart.png" class="d-block w-100" alt="..." />
+                <div class="carousel-caption d-none d-md-block"></div>
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="mariowoodMiddle.png"
+                  class="d-block w-100"
+                  alt="..."
+                />
+                <div class="carousel-caption d-none d-md-block"></div>
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="mariowoodMiddle.png"
+                  class="d-block w-100"
+                  alt="..."
+                />
+                <div class="carousel-caption d-none d-md-block"></div>
+              </div>
+            </div>
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#MarioWood"
+              data-bs-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#MarioWood"
+              data-bs-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
         </div>
         <div class="col-md-6 text-center order-1 order-md-2">
           <div class="row justify-content-center">
             <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
-              <h2>Skull Sunflowers</h2>
-              <img
-                src="/websiteDev/elavibe.com/images/SpaceDan.png"
-                class="d-none d-lg-inline"
-              />
+              <h2>Floppy Bit Mario</h2>
+              <img src="SpaceDan.png" class="d-none d-lg-inline" />
               <p class="lead">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus
-                adipisci architecto molestiae rem inventore quam corrupti
-                similique. Quis corporis quae necessitatibus. Necessitatibus ab
-                cum porro molestias? Suscipit placeat ea modi? sit amet,
-                consectetur adipisicing elit. Minus adipisci architecto
-                molestiae rem inventore quam corrupti similique. Quis corporis
-                quae necessitatibus. Necessitatibus ab cum porro molestias?
-                Suscipit placeat ea modi?
+                Bacon ipsum dolor amet tongue tempor consequat kielbasa, spare
+                ribs cupim leberkas aliqua. Nisi pork consequat, ham hock velit
+                short loin pastrami duis ut landjaeger. Kevin velit bresaola
+                filet mignon exercitation turkey ad short loin spare ribs doner
+                ex in minim. Spare ribs pork chop sausage, tri-tip quis shankle
+                esse. Tri-tip non ex salami, sint veniam pig dolore frankfurter
+                labore id spare ribs eiusmod turkey tempor. Ut tempor duis cow
+                chuck.
               </p>
             </div>
           </div>
@@ -154,6 +349,12 @@
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="script.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+      crossorigin="anonymous"
+    ></script>
+
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
