changed button to hold on orange

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,6 +26,16 @@
     <link rel="stylesheet" href="style.css" />
 
     <title>elavibeDotCom</title>
+
+    <style>
+      #mainNavbar #portfolio {
+        color: orangered;
+      }
+
+      #mainNavbar #portfolio:hover {
+        color: orangered;
+      }
+    </style>
   </head>
 
   <body>
@@ -50,7 +60,10 @@
             <a href="http://elavibe.com/index.html" class="nav-link">home</a>
           </li>
           <li class="navbar-nav">
-            <a href="http://www.elavibe.com/portfolio.html" class="nav-link"
+            <a
+              href="http://www.elavibe.com/portfolio.html"
+              id="portfolio"
+              class="nav-link"
               >portfolio</a
             >
           </li>
