post it page created

--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,15 @@
     <link rel="stylesheet" href="style.css" />
 
     <title>elavibeDotCom</title>
+    <style>
+      #mainNavbar #contact {
+        color: orangered;
+      }
+
+      #mainNavbar #contact:hover {
+        color: orangered;
+      }
+    </style>
   </head>
 
   <body>
@@ -60,7 +69,10 @@
             >
           </li>
           <li class="navbar-nav">
-            <a href="http://www.elavibe.com/contact.html" class="nav-link"
+            <a
+              href="http://www.elavibe.com/contact.html"
+              id="contact"
+              class="nav-link"
               >contact</a
             >
           </li>
