--- a/postItPage.html
+++ b/postItPage.html
@@ -34,6 +34,15 @@
       class="navbar navbar-dark bg-dark navbar-expand-md py-0 fixed-top"
     >
       <a href="http://www.elavibe.com/index.html" class="navbar-brand">elavibeDotCom</a>
+       <style>
+      #mainNavbar #postit {
+        color: orangered;
+      }
+
+      #mainNavbar #postit:hover {
+        color: orangered;
+      }
+    </style>
       <button
         class="navbar-toggler"
         data-toggle="collapse"
@@ -51,7 +60,7 @@
             <a href="http://www.elavibe.com/portfolio.html" class="nav-link">portfolio</a>
           </li>
           <li class="navbar-nav">
-            <a href="http://www.elavibe.com/postItPage.html" class="nav-link">postit drawings</a>
+            <a href="http://www.elavibe.com/postItPage.html" id="postit"class="nav-link">postit drawings</a>
           </li>
           <li class="navbar-nav">
             <a href="http://www.elavibe.com/contact.html" class="nav-link">contact</a>
