--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         data-toggle="collapse"
         data-target="#navLinks"
         aria-label="Toggle navbar"
+        id="navButton"
       >
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -67,10 +68,18 @@
     <section class="container-fluid px-0">
       <div class="row align-items-center content">
         <div class="col-md-6 order-1 order-md-2">
+          <button class="changePicture">press me</button>
           <img
             src="elavibeLogoSMOrangeBlack.png"
             alt="picture of me"
+            class="img-fluid hidden"
+            id="spaceArt"
+          />
+          <img
+            src="elavibeLogoSMBlackOrange.png"
+            alt="picture of me"
             class="img-fluid"
+            id="spaceArt2"
           />
         </div>
         <div class="col-md-6 text-center order-1 order-md-2">
