--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
   <body>
     <nav
       id="mainNavbar"
-      class="navbar navbar-dark bg-dark navbar-expand-md py-0 fixed-top"
+      class="navbar scrolled bg-dark navbar-expand-md py-0 fixed-top"
     >
       <a href="http://www.elavibe.com/index.html" class="navbar-brand"
         >elavibeDotCom</a
