--- a/index.html
+++ b/index.html
@@ -33,13 +33,12 @@
       id="mainNavbar"
       class="navbar scrolled navbar-dark bg-dark navbar-expand-md py-0 fixed-top"
     >
-      <a href="#" class="navbar-brand">elavibeDotCom</a>
+      <a href="#" id="navButton" class="navbar-brand">elavibeDotCom</a>
       <button
         class="navbar-toggler"
         data-toggle="collapse"
         data-target="#navLinks"
         aria-label="Toggle navbar"
-        id="navButton"
       >
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -72,13 +71,13 @@
           <img
             src="elavibeLogoSMOrangeBlack.png"
             alt="picture of me"
-            class="img-fluid hidden"
+            class="img-fluid"
             id="spaceArt"
           />
           <img
             src="elavibeLogoSMBlackOrange.png"
             alt="picture of me"
-            class="img-fluid"
+            class="img-fluid hidden"
             id="spaceArt2"
           />
         </div>
