--- a/portfolio.html
+++ b/portfolio.html
@@ -81,10 +81,10 @@
       </div>
     </nav>
 
-    <section class="container-fluid px-0">
+    <section class="container-fluid px-5">
       <div class="row align-items-center content">
         <div class="col-md-6">
-          <div id="Wutang" class="carousel slide">
+          <div id="Wutang" class="grover carousel slide">
             <div class="carousel-indicators">
               <button
                 type="button"
@@ -109,15 +109,27 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="WuTangStart.png" class="d-block w-100" alt="..." />
+                <img
+                  src="FinalWUGROGrayBG.png"
+                  class="grover d-block w-100"
+                  alt="..."
+                />
                 <div class="carousel-caption d-none d-md-block"></div>
               </div>
               <div class="carousel-item">
-                <img src="WuTangMask.png" class="d-block w-100" alt="..." />
+                <img
+                  src="WuTangMask.png"
+                  class="grover d-block w-100"
+                  alt="..."
+                />
                 <div class="carousel-caption d-none d-md-block"></div>
               </div>
               <div class="carousel-item">
-                <img src="WuTangSecond.png" class="d-block w-100" alt="..." />
+                <img
+                  src="WuTangSecond.png"
+                  class="grover d-block w-100"
+                  alt="..."
+                />
                 <div class="carousel-caption d-none d-md-block"></div>
               </div>
             </div>
@@ -167,7 +179,7 @@
         </div>
       </div>
     </section>
-    <section class="container-fluid px-0">
+    <section class="container-fluid px-5">
       <div class="row align-items-center content">
         <div class="col-md-6 text-center order-2 order-md-1">
           <div class="row justify-content-center">
@@ -215,7 +227,7 @@
               <div class="carousel-item active">
                 <img
                   src="skullFlowersfinish2.png"
-                  class="d-block w-100"
+                  class="grover d-block w-100"
                   alt="..."
                 />
                 <div class="carousel-caption d-none d-md-block"></div>
@@ -223,7 +235,7 @@
               <div class="carousel-item">
                 <img
                   src="skullFlowersSkull.png"
-                  class="d-block w-100"
+                  class="grover d-block w-100"
                   alt="..."
                 />
                 <div class="carousel-caption d-none d-md-block"></div>
@@ -231,7 +243,7 @@
               <div class="carousel-item">
                 <img
                   src="skullFlowersStart.png"
-                  class="d-block w-100"
+                  class="grover d-block w-100"
                   alt="..."
                 />
                 <div class="carousel-caption d-none d-md-block"></div>
@@ -265,7 +277,7 @@
         </div>
       </div>
     </section>
-    <section class="container-fluid px-0">
+    <section class="container-fluid px-5">
       <div class="row align-items-center content">
         <div class="col-md-6">
           <div id="MarioWood" class="carousel slide">
@@ -293,13 +305,9 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="mariowoodstart.png" class="d-block w-100" alt="..." />
-                <div class="carousel-caption d-none d-md-block"></div>
-              </div>
-              <div class="carousel-item">
                 <img
-                  src="mariowoodMiddle.png"
-                  class="d-block w-100"
+                  src="mariowoodstart.png"
+                  class="grover d-block w-100"
                   alt="..."
                 />
                 <div class="carousel-caption d-none d-md-block"></div>
@@ -307,7 +315,15 @@
               <div class="carousel-item">
                 <img
                   src="mariowoodMiddle.png"
-                  class="d-block w-100"
+                  class="grover d-block w-100"
+                  alt="..."
+                />
+                <div class="carousel-caption d-none d-md-block"></div>
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="mariowoodMiddle.png"
+                  class="grover d-block w-100"
                   alt="..."
                 />
                 <div class="carousel-caption d-none d-md-block"></div>
