added new hands for the buttons

--- a/index.html
+++ b/index.html
@@ -58,7 +58,11 @@
             >
           </li>
           <li class="navbar-nav">
-            <a href="" class="nav-link">contact</a>
+            <a
+              href="http://www.elavibe.com/about.html"
+              id="about"
+              class="nav-link"
+              >about</a
           </li>
         </ul>
       </div>
@@ -67,7 +71,6 @@
     <section class="container-fluid px-0">
       <div class="row align-items-center content">
         <div class="col-md-6 order-1 order-md-2">
-          <button class="changePicture">press me</button>
           <img
             src="elavibeLogoSMOrangeBlack.png"
             alt="picture of me"
