--- a/contact.html
+++ b/contact.html
@@ -70,16 +70,50 @@
           </li>
           <li class="navbar-nav">
             <a
-              href="http://www.elavibe.com/contact.html"
+              href="http://www.elavibe.com/about.html"
               id="contact"
               class="nav-link"
-              >contact</a
+              >about</a
             >
           </li>
         </ul>
       </div>
     </nav>
-
+    <section>
+<div class="col-md-6 "">
+ 
+      </div>
+      <div class="row align-items-center content">
+        <div class="col-md-6 order-2 order-md-1">
+          <img
+            src="DanPicture.png"
+            alt="picture of me"
+            class="grover img-fluid"
+          />
+        </div>
+        <div class="col-md-6 text-center order-1 order-md-2">
+          <div class="row justify-content-center">
+            <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+              <h2>Dan "SpaceDan" Taylor</h2>
+              <img
+                src="SpaceDan.png"
+                class="d-none d-lg-inline"
+              />
+              <p class="lead">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus
+                adipisci architecto molestiae rem inventore quam corrupti
+                similique. Quis corporis quae necessitatibus. Necessitatibus ab
+                cum porro molestias? Suscipit placeat ea modi? sit amet,
+                consectetur adipisicing elit. Minus adipisci architecto
+                molestiae rem inventore quam corrupti similique. Quis corporis
+                quae necessitatibus. Necessitatibus ab cum porro molestias?
+                Suscipit placeat ea modi?
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="script.js"></script>
