--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,12 @@
       href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700"
       rel="stylesheet"
     />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cal+Sans&family=Oswald:wght@200..700&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <!-- Bootstrap CSS -->
     <link
       rel="stylesheet"
@@ -73,18 +78,18 @@
             >
           </li>
           <li class="navbar-nav">
-            <a href="http://www.elavibe.com/contact.html" class="nav-link"
-              >contact</a
+            <a href="http://www.elavibe.com/about.html" class="nav-link"
+              >about</a
             >
           </li>
         </ul>
       </div>
     </nav>
 
-    <section class="container-fluid px-5">
+    <section class="container-fluid px-0">
       <div class="row align-items-center content">
         <div class="col-md-6">
-          <div id="Wutang" class="grover carousel slide">
+          <div id="Wutang" class="carousel slide">
             <div class="carousel-indicators">
               <button
                 type="button"
@@ -136,14 +141,13 @@
             <button
               class="carousel-control-prev"
               type="button"
-              data-bs-target="#carouselExampleCaptions"
+              data-bs-target="#Wutang"
               data-bs-slide="prev"
             >
-              <span
-                class="carousel-control-prev-icon"
-                aria-hidden="true"
-              ></span>
-              <span class="visually-hidden">Previous</span>
+              <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span> -->
+              <span class="previousBlack visually-hidden"
+                ><img class="previousSettings" src="SpaceDanHandLeft.png"
+              /></span>
             </button>
             <button
               class="carousel-control-next"
@@ -151,11 +155,13 @@
               data-bs-target="#Wutang"
               data-bs-slide="next"
             >
-              <span
+              <!-- <span
                 class="carousel-control-next-icon"
                 aria-hidden="true"
-              ></span>
-              <span class="visually-hidden">Next</span>
+              ></span> -->
+              <span class="previousBlack visually-hidden"
+                ><img class="" src="SpaceDanHandRight.png"
+              /></span>
             </button>
           </div>
         </div>
@@ -179,7 +185,7 @@
         </div>
       </div>
     </section>
-    <section class="container-fluid px-5">
+    <section class="container-fluid px-0">
       <div class="row align-items-center content">
         <div class="col-md-6 text-center order-2 order-md-1">
           <div class="row justify-content-center">
@@ -255,11 +261,13 @@
               data-bs-target="#carouselExampleCaptions"
               data-bs-slide="prev"
             >
-              <span
+              <!-- <span
                 class="carousel-control-prev-icon"
                 aria-hidden="true"
-              ></span>
-              <span class="visually-hidden">Previous</span>
+              ></span> -->
+              <span class="previousBlack visually-hidden"
+                ><img class="previousSettings" src="SpaceDanHandLeft.png"
+              /></span>
             </button>
             <button
               class="carousel-control-next"
@@ -267,17 +275,19 @@
               data-bs-target="#carouselExampleCaptions"
               data-bs-slide="next"
             >
-              <span
+              <!-- <span
                 class="carousel-control-next-icon"
                 aria-hidden="true"
-              ></span>
-              <span class="visually-hidden">Next</span>
+              ></span> -->
+              <span class="previousBlack visually-hidden"
+                ><img class="" src="SpaceDanHandRight.png"
+              /></span>
             </button>
           </div>
         </div>
       </div>
     </section>
-    <section class="container-fluid px-5">
+    <section class="container-fluid px-0">
       <div class="row align-items-center content">
         <div class="col-md-6">
           <div id="MarioWood" class="carousel slide">
@@ -306,7 +316,7 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img
-                  src="mariowoodstart.png"
+                  src="mariowoodFinal.png"
                   class="grover d-block w-100"
                   alt="..."
                 />
@@ -314,7 +324,7 @@
               </div>
               <div class="carousel-item">
                 <img
-                  src="mariowoodMiddle.png"
+                  src="mariowoodstart.png"
                   class="grover d-block w-100"
                   alt="..."
                 />
@@ -335,11 +345,13 @@
               data-bs-target="#MarioWood"
               data-bs-slide="prev"
             >
-              <span
+              <!-- <span
                 class="carousel-control-prev-icon"
                 aria-hidden="true"
-              ></span>
-              <span class="visually-hidden">Previous</span>
+              ></span> -->
+              <span class="previousBlack visually-hidden"
+                ><img class="previousSettings" src="SpaceDanHandLeft.png"
+              /></span>
             </button>
             <button
               class="carousel-control-next"
@@ -347,11 +359,13 @@
               data-bs-target="#MarioWood"
               data-bs-slide="next"
             >
-              <span
+              <!-- <span
                 class="carousel-control-next-icon"
                 aria-hidden="true"
-              ></span>
-              <span class="visually-hidden">Next</span>
+              ></span> -->
+              <span class="previousBlack visually-hidden"
+                ><img class="" src="SpaceDanHandRight.png"
+              /></span>
             </button>
           </div>
         </div>
@@ -359,6 +373,210 @@
           <div class="row justify-content-center">
             <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
               <h2>Floppy Bit Mario</h2>
+              <img src="SpaceDan.png" class="d-none d-lg-inline" />
+              <p class="lead">
+                Bacon ipsum dolor amet tongue tempor consequat kielbasa, spare
+                ribs cupim leberkas aliqua. Nisi pork consequat, ham hock velit
+                short loin pastrami duis ut landjaeger. Kevin velit bresaola
+                filet mignon exercitation turkey ad short loin spare ribs doner
+                ex in minim. Spare ribs pork chop sausage, tri-tip quis shankle
+                esse. Tri-tip non ex salami, sint veniam pig dolore frankfurter
+                labore id spare ribs eiusmod turkey tempor. Ut tempor duis cow
+                chuck.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="container-fluid px-0">
+      <div class="row align-items-center content">
+        <div class="col-md-6 text-center order-2 order-md-1">
+          <div class="row justify-content-center">
+            <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+              <h2>"Real Ghostbusters" Boogie Man</h2>
+              <img src="SpaceDan.png" class="d-none d-lg-inline" />
+              <p class="lead">
+                Bacon ipsum dolor amet tongue tempor consequat kielbasa, spare
+                ribs cupim leberkas aliqua. Nisi pork consequat, ham hock velit
+                short loin pastrami duis ut landjaeger. Kevin velit bresaola
+                filet mignon exercitation turkey ad short loin spare ribs doner
+                ex in minim. Spare ribs pork chop sausage, tri-tip quis shankle
+                esse. Tri-tip non ex salami, sint veniam pig dolore frankfurter
+                labore id spare ribs eiusmod turkey tempor. Ut tempor duis cow
+                chuck.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 order-1 order-md-2">
+          <div id="boogieMan" class="carousel slide">
+            <div class="carousel-indicators">
+              <button
+                type="button"
+                data-bs-target="#boogieMan"
+                data-bs-slide-to="0"
+                class="active"
+                aria-current="true"
+                aria-label="Slide 1"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#boogieMan"
+                data-bs-slide-to="1"
+                aria-label="Slide 2"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#boogieMan"
+                data-bs-slide-to="2"
+                aria-label="Slide 3"
+              ></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img
+                  src="boogiemanFinal.png"
+                  class="grover d-block w-100"
+                  alt="..."
+                />
+                <div class="carousel-caption d-none d-md-block"></div>
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="boogieman2.png"
+                  class="grover d-block w-100"
+                  alt="..."
+                />
+                <div class="carousel-caption d-none d-md-block"></div>
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="boogieman3.png"
+                  class="grover d-block w-100"
+                  alt="..."
+                />
+                <div class="carousel-caption d-none d-md-block"></div>
+              </div>
+            </div>
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#boogieMan"
+              data-bs-slide="prev"
+            >
+              <!-- <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span> -->
+              <span class="previousBlack visually-hidden"
+                ><img class="previousSettings" src="SpaceDanHandLeft.png"
+              /></span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#boogieMan"
+              data-bs-slide="next"
+            >
+              <!-- <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span> -->
+              <span class="previousBlack visually-hidden"
+                ><img class="" src="SpaceDanHandRight.png"
+              /></span>
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="container-fluid px-0">
+      <div class="row align-items-center content">
+        <div class="col-md-6">
+          <div id="pigPenJason" class="carousel slide">
+            <div class="carousel-indicators">
+              <button
+                type="button"
+                data-bs-target="#pigPenJason"
+                data-bs-slide-to="0"
+                class="active"
+                aria-current="true"
+                aria-label="Slide 1"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#pigPenJason"
+                data-bs-slide-to="1"
+                aria-label="Slide 2"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#pigPenJason"
+                data-bs-slide-to="2"
+                aria-label="Slide 3"
+              ></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img
+                  src="pigPenJasonFInal.png"
+                  class="grover d-block w-100"
+                  alt="..."
+                />
+                <div class="carousel-caption d-none d-md-block"></div>
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="pigPenJason.png"
+                  class="grover d-block w-100"
+                  alt="..."
+                />
+                <div class="carousel-caption d-none d-md-block"></div>
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="pigPenJason2.png"
+                  class="grover d-block w-100"
+                  alt="..."
+                />
+                <div class="carousel-caption d-none d-md-block"></div>
+              </div>
+            </div>
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#pigPenJason"
+              data-bs-slide="prev"
+            >
+              <!-- <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span> -->
+              <span class="previousBlack visually-hidden"
+                ><img class="previousSettings" src="SpaceDanHandLeft.png"
+              /></span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#pigPenJason"
+              data-bs-slide="next"
+            >
+              <!-- <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span> -->
+              <span class="previousBlack visually-hidden"
+                ><img class="" src="SpaceDanHandRight.png"
+              /></span>
+            </button>
+          </div>
+        </div>
+        <div class="col-md-6 text-center order-1 order-md-2">
+          <div class="row justify-content-center">
+            <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+              <h2>Pig Pen Jason</h2>
               <img src="SpaceDan.png" class="d-none d-lg-inline" />
               <p class="lead">
                 Bacon ipsum dolor amet tongue tempor consequat kielbasa, spare
