--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             >
           </li>
           <li class="navbar-nav">
-            <a href="http://www.elavibe.com/portfolio.html" class="nav-link"
+            <a href="http://www.elavibe.com/postItPage.html" class="nav-link"
               >postit drawings</a
             >
           </li>
@@ -63,6 +63,7 @@
               id="about"
               class="nav-link"
               >about</a
+            >
           </li>
         </ul>
       </div>
