--- a/postItPage.html
+++ b/postItPage.html
@@ -64,53 +64,66 @@
             >
           </li>
           <li class="navbar-nav">
-            <a href="http://www.elavibe.com/postItPage.html" 
-             id="postIt"class="nav-link"
+            <a
+              href="http://www.elavibe.com/postItPage.html"
+              id="postIt"
+              class="nav-link"
               >postit drawings</a
             >
           </li>
           <li class="navbar-nav">
-            <a
-              href="http://www.elavibe.com/about.html"
-             
-              class="nav-link"
+            <a href="http://www.elavibe.com/about.html" class="nav-link"
               >about</a
             >
           </li>
         </ul>
       </div>
     </nav>
-    <section>
-<div class="col-md-6 "">
- 
-      </div>
-      <div class="row align-items-center content">
-        <div class="col-md-6 order-2 order-md-1">
-          <img
-            src="DanPicture.png"
-            alt="picture of me"
-            class="grover img-fluid"
-          />
+    <section class="container-fluid">
+      <div class="row-lg-6 align-items-center content">
+        <div class="header">
+          <h1>Post It Notes</h1>
+          <p>
+            ipsum dolor amet tongue tempor consequat kielbasa, spare ribs cupim
+            leberkas aliqua. Nisi pork consequat, ham hock velit short loin
+            pastrami duis ut landjaeger. Kevin velit bresaola filet mignon
+            exercitation turkey ad short loin spare ribs doner ex in minim.
+            Spare ribs pork chop sausage, tri-tip quis shankle esse. Tri-tip non
+            ex salami, sint veniam pig dolore frankfurter labore id spare ribs
+            eiusmod turkey tempor. Ut tempor duis cow chuck.
+          </p>
         </div>
-        <div class="col-md-6 text-center order-1 order-md-2">
-          <div class="row justify-content-center">
-            <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
-              <h2>Dan "SpaceDan" Taylor</h2>
-              <img
-                src="SpaceDan.png"
-                class="d-none d-lg-inline"
-              />
-              <p class="lead">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus
-                adipisci architecto molestiae rem inventore quam corrupti
-                similique. Quis corporis quae necessitatibus. Necessitatibus ab
-                cum porro molestias? Suscipit placeat ea modi? sit amet,
-                consectetur adipisicing elit. Minus adipisci architecto
-                molestiae rem inventore quam corrupti similique. Quis corporis
-                quae necessitatibus. Necessitatibus ab cum porro molestias?
-                Suscipit placeat ea modi?
-              </p>
-            </div>
+
+        <div class="outline row justify-content-center align-items-center">
+          <div class="">
+            <img class="postItPictures" src="StarScream.png" />
+          </div>
+          <div><img class="postItPictures" src="XmasCarol.png" /></div>
+        </div>
+      </div>
+    </section>
+    <section class="container-fluid">
+      <div class="row-md-6 align-items-center content">
+        <div class="outline row justify-content-center align-items-center">
+          <div class="">
+            <img class="postItPictures" src="Scoob.png" />
+          </div>
+          <div><img class="postItPictures" src="Shaggy.png" /></div>
+          <div class="">
+            <img class="postItPictures" src="Scoob.png" />
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="container-fluid">
+      <div class="row-md-6 align-items-center content">
+        <div class="outline row justify-content-center align-items-center">
+          <div class="">
+            <img class="postItPictures" src="Grinch.png" />
+          </div>
+          <div><img class="postItPictures" src="Max.png" /></div>
+          <div class="">
+            <img class="postItPictures" src="Sam.png" />
           </div>
         </div>
       </div>
