post it page created

--- a/postItPage.html
+++ b/postItPage.html
@@ -28,7 +28,7 @@
     />
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="style copy.css" />
+    <link rel="stylesheet" href="style_copy.css" />
 
     <title>elavibeDotCom</title>
 
