post it page fixed

--- a/postItPage.html
+++ b/postItPage.html
@@ -92,13 +92,7 @@
             <div class="col-10">
           <h1>post it drawings</h1>
           <p class="lead">
-            ipsum dolor amet tongue tempor consequat kielbasa, spare ribs cupim
-            leberkas aliqua. Nisi pork consequat, ham hock velit short loin
-            pastrami duis ut landjaeger. Kevin velit bresaola filet mignon
-            exercitation turkey ad short loin spare ribs doner ex in minim.
-            Spare ribs pork chop sausage, tri-tip quis shankle esse. Tri-tip non
-            ex salami, sint veniam pig dolore frankfurter labore id spare ribs
-            eiusmod turkey tempor. Ut tempor duis cow chuck.
+           These are my post it note drawings. I started drawing these for my kids lunch box, around Thanksgiving 2021 to count down the days until break. I didn't stop and I am currently just over 600 drawings! Here are some of my favorites.
           </p>
         </div>
 
@@ -106,9 +100,9 @@
           class="container-fluid row justify-content-center align-items-center"
         >
           <div class="">
-            <img class="postItPictures" src="Grinch.png" />
+            <img class="postItPictures" src="MisfitToy.png" />
           </div>
-          <div><img class="postItPictures" src="XmasCarol.png" /></div>
+          <div><img class="postItPictures" src="Shadow.png" /></div>
           <div><img class="postItPictures" src="Shaggy.png" /></div>
           <div class="">
             <img class="postItPictures" src="Max.png" />
