update index and postitpage

--- a/index.html
+++ b/index.html
@@ -91,14 +91,7 @@
               <!-- <h2>WuTang SuperGrover</h2> -->
               <img src="" class="d-none d-lg-inline" />
               <p class="lead">
-                Bacon ipsum dolor amet tongue tempor consequat kielbasa, spare
-                ribs cupim leberkas aliqua. Nisi pork consequat, ham hock velit
-                short loin pastrami duis ut landjaeger. Kevin velit bresaola
-                filet mignon exercitation turkey ad short loin spare ribs doner
-                ex in minim. Spare ribs pork chop sausage, tri-tip quis shankle
-                esse. Tri-tip non ex salami, sint veniam pig dolore frankfurter
-                labore id spare ribs eiusmod turkey tempor. Ut tempor duis cow
-                chuck.
+                Welcome to elavibe.com, a collection of my creations.
               </p>
             </div>
           </div>
