--- a/postItPage.html
+++ b/postItPage.html
@@ -93,16 +93,16 @@
           <h1>post it drawings</h1>
           <p class="lead">
             These are my post it note drawings. I started drawing these for my
-            kids lunch box, around Thanksgiving 2021 to count down the days
+            kids lunch box around Thanksgiving 2021, to count down the days
             until break. I didn't stop and I am currently just over 600
             drawings! Here are some of my favorites.
           </p>
           <button type="button" class="btn btn-primary refresh-button">
-            refresh art
+            change art
           </button>
         </div>
       </div>
-      <div class="container-fluid col-10 text-center align-items-center">
+      <div class="container-fluid col text-center align-items-center">
         <img class="img1 postItPicturesTall" src="PostItTall1.png" />
         <img class="img2 postItPicturesTall" src="PostItSquare1.png" />
         <img class="img3 postItPicturesTall" src="PostItSquare1.png" />
@@ -111,7 +111,7 @@
         <img class="img6 postItPicturesTall" src="PostItTall1.png" />
       </div>
       <div
-        class="container-fluid col-10 text-center align-items-center d-none d-md-block d-lg-block"
+        class="container-fluid col text-center align-items-center d-none d-md-block d-lg-block"
       >
         <img class="img7 postItPicturesWide" src="PostItWide1.png" />
         <img class="img8 postItPicturesTall" src="PostItTall1.png" />
