added javascript to change buttons when tapped from make bigger to make smaller

--- a/postItPage.html
+++ b/postItPage.html
@@ -97,28 +97,58 @@
             until break. I didn't stop and I am currently just over 600
             drawings! Here are some of my favorites.
           </p>
-          <button type="button" class="btn btn-primary refresh-button">
-            change art
+          <button id="button" class="buttonChange">change art</button>
+          <button
+            id="buttonSize"
+            class="buttonChange"
+            onclick="removeClassTall(),removeClassTall2(), 
+            removeClassTall3(),removeClassTall4(),removeClassTall5(),removeClassWide(),
+            removeClassWide2(),removeClassWide3(),removeClassTall6(),removeClassTall7(),
+            removeClassTall8(),
+            removeClassTall9(),
+            change()"
+          >
+            make larger
           </button>
         </div>
       </div>
       <div class="container-fluid col text-center align-items-center">
-        <img class="img1 postItPicturesTall" src="PostItTall1.png" />
-        <img class="img2 postItPicturesTall" src="PostItSquare1.png" />
-        <img class="img3 postItPicturesTall" src="PostItSquare1.png" />
-        <img class="img4 postItPicturesTall" src="PostItTall1.png" />
-        <img class="img5 postItPicturesWide" src="PostItWide1.png" />
-        <img class="img6 postItPicturesTall" src="PostItTall1.png" />
+        <img id="tall" class="img1 postItPicturesTall" src="PostItTall1.png" />
+        <img
+          id="tall2"
+          class="img2 postItPicturesTall"
+          src="PostItSquare1.png"
+        />
+        <img
+          id="tall3"
+          class="img3 postItPicturesTall"
+          src="PostItSquare1.png"
+        />
+        <img id="tall4" class="img4 postItPicturesTall" src="PostItTall1.png" />
+        <img id="wide" class="img5 postItPicturesWide" src="PostItWide1.png" />
+        <img id="tall5" class="img6 postItPicturesTall" src="PostItTall1.png" />
       </div>
       <div
         class="container-fluid col text-center align-items-center d-none d-md-block d-lg-block"
       >
-        <img class="img7 postItPicturesWide" src="PostItWide1.png" />
-        <img class="img8 postItPicturesTall" src="PostItTall1.png" />
-        <img class="img9 postItPicturesWide" src="PostItWide1.png" />
-        <img class="img10 postItPicturesTall" src="PostItSquare1.png" />
-        <img class="img11 postItPicturesTall" src="PostItTall1.png" />
-        <img class="img12 postItPicturesTall" src="PostItSquare1.png" />
+        <img id="wide2" class="img7 postItPicturesWide" src="PostItWide1.png" />
+        <img id="tall6" class="img8 postItPicturesTall" src="PostItTall1.png" />
+        <img id="wide3" class="img9 postItPicturesWide" src="PostItWide1.png" />
+        <img
+          id="tall7"
+          class="img10 postItPicturesTall"
+          src="PostItSquare1.png"
+        />
+        <img
+          id="tall8"
+          class="img11 postItPicturesTall"
+          src="PostItTall1.png"
+        />
+        <img
+          id="tall9"
+          class="img12 postItPicturesTall"
+          src="PostItSquare1.png"
+        />
         <!-- <img class="img13 postItPicturesWide" src="PostItWide1.png" />
         <img class="img14 postItPicturesTall" src="PostItTall1.png" /> -->
       </div>
