updated about page and added new images and script

--- a/about.html
+++ b/about.html
@@ -42,7 +42,9 @@
       id="mainNavbar"
       class="navbar scrolled navbar-dark navbar-expand-md py-0 fixed-top"
     >
-      <a href="" class="navbar-brand">elavibeDotCom</a>
+      <a href="http://elavibe.com/index.html" class="navbar-brand"
+        >elavibeDotCom</a
+      >
       <button
         class="navbar-toggler"
         data-toggle="collapse"
@@ -81,23 +83,23 @@
       <div class="row align-items-center">
         <div class="col-md-6 order-2 order-md-1">
           <img
-            id="danPic"
-            src="DanPicture.png"
-            alt="picture of me"
-            class="hidden grover img-fluid"
-          />
-
-          <img
             id="spacePic"
             src="spaceDanAbout.png"
             alt="picture of me"
             class="grover img-fluid"
           />
+
+          <img
+            id="danPic"
+            src="DanDrawing.png"
+            alt="picture of me"
+            class="grover img-fluid hidden"
+          />
         </div>
         <div class="col-md-6 text-center order-1 order-md-2">
           <div class="row justify-content-center content">
             <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
-              <h2>Dan "SpaceDan" Taylor</h2>
+              <h2 class="mc">Dan "SpaceDan" Taylor</h2>
 
               <img src="SpaceDan.png" class="d-none d-lg-inline" />
               <p class="lead">
@@ -117,7 +119,7 @@
     </section>
 
     <!-- <script src="script.js"></script> -->
-    <script src="script2.js"></script>
+    <script src="aboutScript.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
