updated postItPage.html and changed the script so the postits are the buttons

--- a/postItPage.html
+++ b/postItPage.html
@@ -95,9 +95,10 @@
             These are my post it note drawings. I started drawing these for my
             kids lunch box around Thanksgiving 2021, to count down the days
             until break. I didn't stop and I am currently just over 600
-            drawings! Here are some of my favorites.
+            drawings! Here are some of my favorites. Tap on the images to
+            change.
           </p>
-          <button id="button" class="buttonChange">change art</button>
+          <!-- <button id="button" class="buttonChange">change art</button>
           <button
             id="buttonSize"
             class="buttonChange"
@@ -109,43 +110,39 @@
             change()"
           >
             make larger
-          </button>
+          </button> -->
         </div>
       </div>
       <div class="container-fluid col text-center align-items-center">
         <img id="tall" class="img1 postItPicturesTall" src="PostItTall1.png" />
         <img
-          id="tall2"
+          id="square"
           class="img2 postItPicturesTall"
           src="PostItSquare1.png"
         />
         <img
-          id="tall3"
+          id="square"
           class="img3 postItPicturesTall"
           src="PostItSquare1.png"
         />
-        <img id="tall4" class="img4 postItPicturesTall" src="PostItTall1.png" />
+        <img id="tall" class="img4 postItPicturesTall" src="PostItTall1.png" />
         <img id="wide" class="img5 postItPicturesWide" src="PostItWide1.png" />
-        <img id="tall5" class="img6 postItPicturesTall" src="PostItTall1.png" />
+        <img id="tall" class="img6 postItPicturesTall" src="PostItTall1.png" />
       </div>
       <div
         class="container-fluid col text-center align-items-center d-none d-md-block d-lg-block"
       >
-        <img id="wide2" class="img7 postItPicturesWide" src="PostItWide1.png" />
-        <img id="tall6" class="img8 postItPicturesTall" src="PostItTall1.png" />
-        <img id="wide3" class="img9 postItPicturesWide" src="PostItWide1.png" />
+        <img id="wide" class="img7 postItPicturesWide" src="PostItWide1.png" />
+        <img id="tall" class="img8 postItPicturesTall" src="PostItTall1.png" />
+        <img id="wide" class="img9 postItPicturesWide" src="PostItWide1.png" />
         <img
-          id="tall7"
+          id="tall"
           class="img10 postItPicturesTall"
           src="PostItSquare1.png"
         />
+        <img id="tall" class="img11 postItPicturesTall" src="PostItTall1.png" />
         <img
-          id="tall8"
-          class="img11 postItPicturesTall"
-          src="PostItTall1.png"
-        />
-        <img
-          id="tall9"
+          id="tall"
           class="img12 postItPicturesTall"
           src="PostItSquare1.png"
         />
@@ -154,7 +151,7 @@
       </div>
     </section>
 
-    <script src="scriptTest.js"></script>
+    <script src="scriptTest2.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
